HTML/CSS done, JavaScript is next

--- a/Project Pizza/css/pizza.css
+++ b/Project Pizza/css/pizza.css
@@ -1,40 +1,160 @@
 body {
-    background-color:#f7b82b;
-    /* background-color: #500f86; */
+    background-color:#fff;
+    /* background-color:#f7b82b; */ /* gold */
+    /* background-color: #500f86; */ /* purple */
     font-family: 'gothic_ultra_otregular';
     margin: 0px; 
     display: block;
+    color: gold;
+}
 
+h1 {
+    /* color:gold;   */
+    margin: auto; 
+    font-size: 100px; 
+    text-shadow: 5px 5px #000;
+    text-align: center; 
+    line-height: .9em;
 }
 /* ---------------------------------------------------------------
-                        BANNER STYLING 
+                        HEADER STYLING 
    --------------------------------------------------------------- */
-.banner-bg {
+.header-bg {
     background-color: #500f86;
     padding-top: 10px;
-    height: 365px;
-    
+    height: 400px;    
 }
 
 .wings-bg {
     background: url('../img/wings1.png');
     margin: 10px;
-    background-repeat: space; /* repeat images horizontally and don't show partial images */
-    background-size: contain;  /* causes image to shrink and fit when viewport is phone sized */
+    background-repeat: space; /* repeat and space images horizontally; don't show partial images */
+    background-size: contain;  /* causes image to shrink and fit (if needed) when viewport shrinks */
     background-position: center; 
 }
 
-.pizza-halo-bg {
+.pizza-halo {
     background-color: #fff; /* in case background image can't be found */
-    height: 198px;   
+    height: 198px;   /* affects horizontal positioning of the wings */
     margin: 0 auto;
     background: url('../img/halo.png');
     background-repeat: no-repeat;
-    /* background-attachment: fixed; */
     background-position: center; 
     background-size: contain;
-    /* border-top: 8px; 
-    border-top-color: #fff; */   
+}
+
+/* ---------------------------------------------------------------
+                        MAIN STYLING 
+   --------------------------------------------------------------- */
+
+main {
+    background: url('../img/pizza4.jpg') repeat center ;
+    background-size: 1600px;
+    height: auto;
+}
+
+.menu-flx {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: center;
+    width: auto;
+    margin: 0% auto;
+    opacity: 0.90;
+}
+
+.menu-cell-hdr {
+    text-align: center; 
+    margin: 0 auto;
+    padding-top: 8px;
+    text-shadow: 2px 3px #000;
+    font-size: 38px;
+}
+
+.menu-cell  {
+    width: 145px;
+    height: 253px;
+    margin: 5px;
+    font-size: 24px;
+    background-color: #500f86;
+    text-shadow: 1.5px 1.5px #000;
+    box-shadow: 0 0 5px 3px;
+    border-radius: 0.5em;
+}
+
+.menu-flx > .button {
+    width: 145px;
+    height: auto;
+    margin: 5px;
+    cursor: pointer;
+    background-color: #500f86;
+    font-size: 22px;
+    box-shadow: 0 0 5px 3px;
+    border-radius: 0.5em;
+}
+
+.button {
+    text-align: center;
+    line-height: .1em;
+    text-shadow: 1.5px 3.5px #000;
+    transition-duration: 0.4s;
+}
+
+.button:hover {
+    text-shadow: none;
+    color: #500f86;
+    background-color: gold;
+}
+
+#cart {
+    width: 300px; 
+    opacity: .90; 
+    box-shadow: 0 0 5px 3px; 
+    border-radius: 0.5em; 
+}
+
+.cart-cell {
+    background-color: #500f86;
+    width: 140px;
+    padding-left: 10px;
+}
+
+#itm-hdr {
+    font-size: 28px;
+    line-height: 0;
+    text-shadow: 2px 3px #000;
+    border-top-left-radius: 0.5em;
+}
+
+#subtot-hdr {
+    font-size: 28px;
+    line-height: 0;
+    text-shadow: 2px 3px #000;
+    border-top-right-radius: 0.5em;
+}
+
+#itm-sel {
+    font-size: 24px;
+    text-shadow: 1.5px 1.5px #000;
+}
+
+#itm-prc {
+    font-size: 24px;
+    text-shadow: 1.5px 1.5px #000;
+}
+
+#tot-prc-hdr {
+    font-size: 28px;
+    text-shadow: 2px 3px #000;
+    border-bottom-left-radius: 0.5em;
+}
+
+#tot-prc {
+    font-size: 28px;
+    text-shadow: 2px 3px #000;
+    border-top-color: #000;
+    border-top-width: 2px;
+    border-bottom-right-radius: 0.5em;
 }
 
 /* ---------------------------------------------------------------
