--- a/Project Pizza/css/pizza.css
+++ b/Project Pizza/css/pizza.css
@@ -66,6 +66,11 @@ main {
 input {
     margin-left: 7px;
 }
+
+label {
+	display: block;
+}
+
 .menu-flx {
     display: flex;
     flex-wrap: wrap;
