--- a/Project Pizza/css/pizza.css
+++ b/Project Pizza/css/pizza.css
@@ -6,8 +6,45 @@ body {
     margin: 0px; 
     display: block;
     color: gold;
+	animation: fadeInAnimation cubic-bezier(0.6, -0.28, 0.74, 0.05) .5s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
 }
 
+  
+@keyframes fadeInAnimation {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+     }
+}
+
+.butterfly > div {position:absolute;}
+.butterfly img {width:100%;}
+		
+.leftwing {
+  animation:flap-l 4s cubic-bezier(.28,-.8,.08,.99) infinite;
+	/*animation-timing-function: ease-in-out;*/
+}
+.rightwing {
+  animation:flap-r 4s cubic-bezier(.28,-.8,.08,.99) infinite;
+	/*animation-timing-function: ease-in-out;*/
+}
+.leftwing, .rightwing {z-index:1;}
+
+@keyframes flap-l {
+			0% {transform:rotateY(0);}
+			50% {transform:rotateY(70deg);}
+			100% {transform:rotateY(0);}
+}
+@keyframes flap-r {
+			0% {transform:rotateY(0); }
+			50% {transform:rotateY(-70deg);}
+			100% {transform:rotateY(0);}
+}
+/* https://codepen.io/Katrine-Marie/pen/MYZNOG */
 h1 {
     /* color:gold;   */
     margin: auto; 
