--- a/Project Pizza/css/pizza.css
+++ b/Project Pizza/css/pizza.css
@@ -9,6 +9,7 @@ body {
 	animation: fadeInAnimation cubic-bezier(0.6, -0.28, 0.74, 0.05) .5s;
     animation-iteration-count: 1;
     animation-fill-mode: forwards;
+    overflow-x: hidden;
 }
 
   
@@ -104,7 +105,7 @@ h1 {
     height: 298px;
     width: 100%;
     /* position: absolute; */
-    z-index: -1;
+    z-index: -2;
 }
 .wings-bg-r {
     background: url('../img/wing-r.png');
@@ -116,7 +117,7 @@ h1 {
     height: 298px;
     width: 100%;
     /* position: absolute; */
-    z-index: -1;
+    z-index: -2;
     margin-top: -309px;
 }
 
@@ -126,7 +127,7 @@ h1 {
    --------------------------------------------------------------- */
 
 main {
-    background: url('../img/pizza4.jpg') repeat center ;
+    background: url('../img/pizza4.jpg') repeat  ;
     /* Alternate way (instead of z-index) to get gold halo on bottom of header */
 /*    box-shadow: inset -4px 9px 9px -4px gold;*/
     background-size: 1600px;
