--- a/Project Pizza/css/pizza.css
+++ b/Project Pizza/css/pizza.css
@@ -1,3 +1,19 @@
+/* ---------------------------------------------------------------
+            FONT from https://www.fontsquirrel.com/
+   --------------------------------------------------------------- */
+
+   @font-face {
+    font-family: 'gothic_ultra_otregular';
+    src: url('gothic_ultra_ot-webfont.eot');
+    src: url('gothic_ultra_ot-webfont.eot?#iefix') format('embedded-opentype'),
+            url('gothic_ultra_ot-webfont.woff') format('woff'),
+            url('gothic_ultra_ot-webfont.ttf') format('truetype'),
+            url('gothic_ultra_ot-webfont.svg#gothic_ultra_otregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
 body {
     background-color:#fff;
     /* background-color:#f7b82b; */ /* gold */
@@ -26,11 +42,11 @@ body {
 .butterfly img {width:100%;} */
 		
 .leftwing {
-  animation:flap-l 5s cubic-bezier(.28,-.8,.08,.99) infinite;
+  animation:flap-l 5s cubic-bezier(.28,-.8,.08,.99) 2;
 	/*animation-timing-function: ease-in-out;*/
 }
 .rightwing {
-  animation:flap-r 5s cubic-bezier(.28,-.8,.08,.99) infinite;
+  animation:flap-r 5s cubic-bezier(.28,-.8,.08,.99) 2;
 	/*animation-timing-function: ease-in-out;*/
 }
 
@@ -190,6 +206,15 @@ label {
     transition-duration: .4s; 
 }
 
+.button-anchor {
+    text-decoration: none; 
+    color: gold;
+}
+
+.button-anchor:hover {
+    text-decoration: none; 
+    color: #500f86;
+}
 .button:hover {
     text-shadow: none;
     color: #500f86;
@@ -268,19 +293,4 @@ label, input:hover {
     border-bottom-right-radius: 0.5em;
 }
 
-/* ---------------------------------------------------------------
-            FONT from https://www.fontsquirrel.com/
-   --------------------------------------------------------------- */
 
-@font-face {
-    font-family: 'gothic_ultra_otregular';
-    src: url('gothic_ultra_ot-webfont.eot');
-    src: url('gothic_ultra_ot-webfont.eot?#iefix') format('embedded-opentype'),
-            url('gothic_ultra_ot-webfont.woff2') format('woff2'),
-            url('gothic_ultra_ot-webfont.woff') format('woff'),
-            url('gothic_ultra_ot-webfont.ttf') format('truetype'),
-            url('gothic_ultra_ot-webfont.svg#gothic_ultra_otregular') format('svg');
-    font-weight: normal;
-    font-style: normal;
-
-}
