--- a/Project Pizza/css/pizza.css
+++ b/Project Pizza/css/pizza.css
@@ -38,23 +38,20 @@ body {
      }
 }
 
-/* .butterfly > div {position:absolute;}
-.butterfly img {width:100%;} */
+/* ---------------------------------------------------------------
+                        Angel Wings Animation
+   --------------------------------------------------------------- */
 		
 .leftwing {
-  animation:flap-l 5s cubic-bezier(.28,-.8,.08,.99) 2;
+    /* animation:flap-l 5s cubic-bezier(.28,-.8,.08,.99) infinite; */
+    animation:flap-l 5s cubic-bezier(.28,-0.66,.2,.8) 2;
 	/*animation-timing-function: ease-in-out;*/
 }
 .rightwing {
-  animation:flap-r 5s cubic-bezier(.28,-.8,.08,.99) 2;
+    /* animation:flap-r 5s cubic-bezier(.28,-.8,.08,.99) 2; */
+    animation:flap-r 5s cubic-bezier(.28,-0.66,.2,.88) 2;
 	/*animation-timing-function: ease-in-out;*/
 }
-
-/* @keyframes flap-l {
-			0% {transform:rotateY(0);}
-			50% {transform:rotateY(-70deg);}
-			100% {transform:rotateY(0);}
-} */
 
 @keyframes flap-l {
 			0% {transform:  perspective(200px) rotateY(0);}
@@ -67,14 +64,15 @@ body {
 			100% {transform:perspective(200px) rotateY(0);}
 }
 /* https://codepen.io/Katrine-Marie/pen/MYZNOG */
+
 h1 {
-    /* color:gold;   */
     margin: auto; 
     font-size: 100px; 
     text-shadow: 5px 5px #000;
     text-align: center; 
     line-height: .9em;
 }
+
 /* ---------------------------------------------------------------
                         HEADER STYLING 
    --------------------------------------------------------------- */
