--- a/Project Pizza/css/pizza.css
+++ b/Project Pizza/css/pizza.css
@@ -219,7 +219,9 @@ label {
 }
 
 .tool-tip .tool-tip-text {
-    visibility: hidden;
+    /* visibility: hidden; */
+    /* must use display for jQuery fadeIn() */
+    display: none;
     width: 120px;
     background-color: gold;
     color: #500f86;
